[gd_scene load_steps=57 format=3 uid="uid://crc3t8b70v77q"]

[ext_resource type="Script" uid="uid://cftfryol3dd15" path="res://Scripts/Control_Player_Intro.gd" id="1_6n0vh"]
[ext_resource type="Texture2D" uid="uid://bcqrteujn564m" path="res://Sprites/Player_Sprites/Sunil/Sunil_Walk.png" id="3_gaets"]
[ext_resource type="Texture2D" uid="uid://e3mstj6c5vsp" path="res://Sprites/Player_Sprites/Sunil/Sunil_Idle.png" id="5_0lqe0"]
[ext_resource type="Texture2D" uid="uid://crxni1f73ys53" path="res://Sprites/Player_Sprites/Sunil/Sunil_Jump.png" id="7_6n0vh"]
[ext_resource type="Texture2D" uid="uid://cb8wrqikxuk50" path="res://Sprites/Player_Sprites/Sunil/Sunil_Tuck.png" id="8_6n0vh"]
[ext_resource type="Texture2D" uid="uid://ucfnw0r3ssut" path="res://Sprites/Player_Sprites/Body/Player_Crouch.png" id="9_llq3k"]
[ext_resource type="Texture2D" uid="uid://dnbbh8rwkqp5h" path="res://Sprites/Player_Sprites/Body/Player_Crawl.png" id="12_dqul1"]
[ext_resource type="Texture2D" uid="uid://bpqh5yl6fhui2" path="res://Sprites/Player_Sprites/Body/Player_Slide.png" id="15_rm3vn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8p5o8"]
load_path = "res://.godot/imported/pixil-frame-0.png-da221accf9fa3d4c62f6805c7616c0f6.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl37s"]
size = Vector2(15, 35)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vejcu"]
animation = &"2a- Female Crouch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e58c1"]
animation = &"2d- Female Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u7ygv"]
animation = &"3c- Female Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2ibys"]
animation = &"3a- Female Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gn7on"]
animation = &"3b- Female Tuck"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_6p0ye"]
blend_point_0/node = SubResource("AnimationNodeAnimation_2ibys")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_gn7on")
blend_point_1/pos = -0.5
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6p0ye"]
animation = &"4a- Female Attack 0"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1d866"]
animation = &"4a- Female Attack 1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_71txx"]
animation = &"4a- Female Attack 2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jmsub"]
animation = &"1a- Female Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_biwqg"]
animation = &"1b- Female Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v2a5k"]
animation = &"2c- Female Crawl"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_anvd5"]
animation = &"3d- Female Land"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_uhnr4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_jmsub")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_biwqg")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_v2a5k")
blend_point_2/pos = Vector2(0.5, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_anvd5")
blend_point_3/pos = Vector2(0, -0.2)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_utggc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_liwp8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_716n5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_anvd5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1d866"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_71txx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wk3fj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6p0ye"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v2a5k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ibys"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ci3k7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tv6pr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tyrp6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mfuq2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_efodu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njqd4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uhnr4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aelj1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2j386"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_elfmm"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gd1b5"]
"states/2a- Female Crouch/node" = SubResource("AnimationNodeAnimation_vejcu")
"states/2a- Female Crouch/position" = Vector2(298.095, 240.923)
"states/2d- Female Slide/node" = SubResource("AnimationNodeAnimation_e58c1")
"states/2d- Female Slide/position" = Vector2(298.095, 120.414)
"states/3c- Female Fall/node" = SubResource("AnimationNodeAnimation_u7ygv")
"states/3c- Female Fall/position" = Vector2(298.095, 22.4145)
states/Airborne/node = SubResource("AnimationNodeBlendSpace1D_6p0ye")
states/Airborne/position = Vector2(131, 22.4145)
"states/Attack 1/node" = SubResource("AnimationNodeAnimation_6p0ye")
"states/Attack 1/position" = Vector2(-55.905, 22.4145)
"states/Attack 2/node" = SubResource("AnimationNodeAnimation_1d866")
"states/Attack 2/position" = Vector2(-55.905, 133.923)
"states/Attack 3/node" = SubResource("AnimationNodeAnimation_71txx")
"states/Attack 3/position" = Vector2(-55.905, 240.923)
states/End/position = Vector2(1161, 222.784)
states/Grounded/node = SubResource("AnimationNodeBlendSpace2D_uhnr4")
states/Grounded/position = Vector2(131, 120.414)
states/Start/position = Vector2(131, 240.923)
transitions = ["Start", "Grounded", SubResource("AnimationNodeStateMachineTransition_utggc"), "Grounded", "Airborne", SubResource("AnimationNodeStateMachineTransition_liwp8"), "Airborne", "Grounded", SubResource("AnimationNodeStateMachineTransition_716n5"), "Grounded", "2d- Female Slide", SubResource("AnimationNodeStateMachineTransition_anvd5"), "Airborne", "3c- Female Fall", SubResource("AnimationNodeStateMachineTransition_1d866"), "2d- Female Slide", "Grounded", SubResource("AnimationNodeStateMachineTransition_71txx"), "3c- Female Fall", "Airborne", SubResource("AnimationNodeStateMachineTransition_wk3fj"), "2a- Female Crouch", "Grounded", SubResource("AnimationNodeStateMachineTransition_6p0ye"), "Grounded", "2a- Female Crouch", SubResource("AnimationNodeStateMachineTransition_v2a5k"), "2d- Female Slide", "2a- Female Crouch", SubResource("AnimationNodeStateMachineTransition_2ibys"), "Attack 2", "Attack 3", SubResource("AnimationNodeStateMachineTransition_ci3k7"), "Attack 3", "Attack 2", SubResource("AnimationNodeStateMachineTransition_tv6pr"), "Grounded", "Attack 2", SubResource("AnimationNodeStateMachineTransition_tyrp6"), "Attack 2", "Grounded", SubResource("AnimationNodeStateMachineTransition_mfuq2"), "Grounded", "Attack 3", SubResource("AnimationNodeStateMachineTransition_efodu"), "Attack 3", "Grounded", SubResource("AnimationNodeStateMachineTransition_njqd4"), "Attack 2", "Attack 1", SubResource("AnimationNodeStateMachineTransition_uhnr4"), "Attack 1", "Attack 2", SubResource("AnimationNodeStateMachineTransition_aelj1"), "Grounded", "Attack 1", SubResource("AnimationNodeStateMachineTransition_2j386"), "Attack 1", "Grounded", SubResource("AnimationNodeStateMachineTransition_elfmm")]
graph_offset = Vector2(-399.905, -58.8876)

[sub_resource type="Animation" id="Animation_b5317"]
resource_name = "1a- Female Idle"
length = 1.8
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_0lqe0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.583333, 0.9167, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_a76va"]
resource_name = "1b- Female Run"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("3_gaets")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_6jltj"]
resource_name = "2a- Female Crouch"
length = 0.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("9_llq3k")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_7oc74"]
resource_name = "2c- Female Crawl"
length = 0.48
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("12_dqul1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rs0ht"]
resource_name = "2d- Female Slide"
length = 0.5
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("15_rm3vn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.085, 0.17, 0.255, 0.431974),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_tccse"]
resource_name = "3a- Female Jump"
length = 0.75
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("7_6n0vh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:vframes")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Appearance/Body:frame")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_ek3me"]
resource_name = "3b- Female Tuck"
length = 0.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("8_6n0vh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yrgqc"]
resource_name = "3c- Female Fall"
length = 0.8
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("7_6n0vh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:vframes")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Appearance/Body:frame")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3]
}

[sub_resource type="Animation" id="Animation_dfj5x"]
resource_name = "3d- Female Land"
length = 0.15
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("7_6n0vh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:vframes")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Appearance/Body:frame")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}

[sub_resource type="Animation" id="Animation_o5tfk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Appearance/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CompressedTexture2D_8p5o8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Appearance/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Appearance/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Appearance/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvyqu"]
_data = {
&"1a- Female Idle": SubResource("Animation_b5317"),
&"1b- Female Run": SubResource("Animation_a76va"),
&"2a- Female Crouch": SubResource("Animation_6jltj"),
&"2c- Female Crawl": SubResource("Animation_7oc74"),
&"2d- Female Slide": SubResource("Animation_rs0ht"),
&"3a- Female Jump": SubResource("Animation_tccse"),
&"3b- Female Tuck": SubResource("Animation_ek3me"),
&"3c- Female Fall": SubResource("Animation_yrgqc"),
&"3d- Female Land": SubResource("Animation_dfj5x"),
&"RESET": SubResource("Animation_o5tfk")
}

[node name="PlayerBody" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_6n0vh")

[node name="Appearance" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="Appearance"]
position = Vector2(0, -1)
texture = SubResource("CompressedTexture2D_8p5o8")

[node name="Body_Collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_yl37s")

[node name="Left_Ray" type="RayCast2D" parent="."]
visible = false
position = Vector2(-5, 0)
target_position = Vector2(0, -17)

[node name="Right_Ray" type="RayCast2D" parent="."]
visible = false
position = Vector2(5, 0)
target_position = Vector2(0, -17)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_gd1b5")
anim_player = NodePath("../AnimationPlayer")
parameters/Airborne/blend_position = 0.0241064
parameters/Grounded/blend_position = Vector2(-0.00268579, -0.21978)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pvyqu")
}

[node name="Timers" type="Node2D" parent="."]

[node name="Coyote Timer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="Landing Impact" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="Timers/Coyote Timer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="Timers/Landing Impact" to="." method="_on_landing_impact_timeout"]
